feat: Agregar archivo index.ts y actualizar rutas de importación a '@trigger/*'. Añadir configuraciones de VSCode y realizar ajustes en varios archivos de error y estrategia SCM.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,8 @@
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
     "paths": {
-      "@core/*": [
-        "./src/core/*"
-      ],
-      "@app/*": [
-        "./src/app/*"
+      "@trigger/*": [
+        "./src/*"
       ]
     }
   },
